maven-debian-helper (0.3) unstable; urgency=low

  UNRELEASED
  * Implement better exception handling.

 -- Torsten Werner <twerner@debian.org>  Sun, 25 Jan 2009 12:27:03 +0100

maven-debian-helper (0.2) unstable; urgency=low

  * Rename the bootstrap script.
  * Add a manpage for mvn-debian.

 -- Torsten Werner <twerner@debian.org>  Sat, 17 Jan 2009 12:13:35 +0100

maven-debian-helper (0.1) unstable; urgency=low

  * Initial release. (Closes: #508511)

 -- Torsten Werner <twerner@debian.org>  Mon, 05 Jan 2009 11:47:25 +0100